--- a/app/src/main/res/layout/item_element_recycle_view.xml
+++ b/app/src/main/res/layout/item_element_recycle_view.xml
@@ -10,14 +10,13 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="37dp"
-        android:layout_height="31dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:padding="18dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src = "@drawable/ic_wb_sunny"/>
+        tools:src = "@drawable/ic_build"/>
 
     <LinearLayout
         android:layout_width="0dp"
