--- a/app/src/main/res/layout/dialog_window_menu.xml
+++ b/app/src/main/res/layout/dialog_window_menu.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
-    android:layout_height="400dp"
+    android:layout_height="500dp"
     android:id="@+id/dialog_window_layout">
 
 
@@ -23,18 +23,17 @@
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="@id/dialog_image"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         tools:text="TextView1"
         app:layout_constraintTop_toBottomOf="@id/dialog_image"
-
-         />
+        />
 
     <TextView
         android:id="@+id/textView_dialog_description"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="@id/textView_dialog_title"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         tools:text="TextView2"
         app:layout_constraintTop_toBottomOf="@id/textView_dialog_title"
         />
@@ -42,7 +41,7 @@
     <TextView
         android:id="@+id/textView_dialog_summary"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/textView_dialog_description"
         app:layout_constraintEnd_toEndOf="@+id/dialog_image"
         android:layout_margin="50dp"
