--- a/app/src/main/res/layout/describe_news.xml
+++ b/app/src/main/res/layout/describe_news.xml
@@ -5,19 +5,19 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/title_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Title" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/name_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Name" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/description_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Description" />
